# auto-matome

./: .gitignore  AGENTS.md  BOOTSTRAP.md  service.config.yaml  service.manifest.yaml
app/: conftest.py  package.json  pyproject.toml  run_pipeline.sh
app/config/: sources.yaml
app/site/: astro.config.mjs  package-lock.json  package.json
app/site/scripts/: sync-output.mjs
app/site/src/: content.config.ts
app/site/src/layouts/: BaseLayout.astro
app/site/src/pages/: index.astro
app/site/src/pages/daily/: [slug].astro
app/site/src/styles/: global.css
app/src/: cli.py  pipeline.py
app/src/analytics/: __init__.py  engagement_report.py  traffic_pull.py
app/src/common/: __init__.py  config.py  metrics.py  thresholds.py
app/src/curate/: __init__.py  article_brief_builder.py  dedup.py  evidence_schema.py  fact_extractor.py  link_card.py  matome_converter.py  notebooklm_synthesizer.py  quality_gate.py  summarize.py  tagger.py  topic_cluster.py  translate_ja.py  trend_detector.py
app/src/distribution/: __init__.py  post_x.py  post_zenn.py
app/src/ingest/: __init__.py  fetch_hn.py  fetch_indieweb.py  fetch_reddit.py  fetch_rss.py  fetch_x.py
app/src/orchestrator/: __init__.py  heartbeat_tasks.py
app/src/site/: __init__.py
app/tests/: test_cli.py  test_config.py  test_matome_converter.py  test_pipeline.py
container/: Containerfile  entrypoint.sh
docs/: deployment.md
docs-auto-matome/: execution-plan.md  revamp-plan.md  service-boundaries.md  site-deployment.md
output/: 2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-12.md  2026-03-13.md  (+8 more)
(+2 files in other folders)
