[project]
name = "auto-matome"
version = "0.1.0"
description = "Auto Matome pipeline — collect, translate, and publish overseas web content for Japanese audiences"
requires-python = ">=3.12"
dependencies = [
    "asset-maximizer-common",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
asset-maximizer-common = { path = "../common" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "asset-maximizer-common",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
]
